--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>contact me</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Contact details</h1>
